--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -274,8 +274,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-37308.htm">动物医院好评模版（宠物医院的好评怎么写）</a></h4>
-                <p>摘要：       今天给各位分享动物医院好评模版的知识，其中也会对宠物医院的好评怎么写进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物医院好评怎么写...</p>
+                <h4><a href="/news/article-19953.htm">动物疫苗经营范围有哪些内容要求（动物疫苗经营许可）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗经营范围有哪些内容要求的知识，其中也会对动物疫苗经营许可进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、生物科技有限.</p>
             </div>
         </div>
     </div>
@@ -284,8 +284,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-4-free-high-speed-nodes.htm">11月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、韩国、欧洲、日本、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-22244.htm">生产宠物粮的工厂有哪些公司名称（生产宠物粮前景如何）</a></h4>
+                <p>摘要：       今天给各位分享生产宠物粮的工厂有哪些公司名称的知识，其中也会对生产宠物粮前景如何进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、山东帅克宠.</p>
             </div>
         </div>
     </div>
@@ -294,8 +294,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-24-free-shadowrocket-node.htm">11月24日更新18.5M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、香港、日本、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25476.htm">动物疫苗批号查询网 动物疫苗批号查询网站官网入口</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗批号查询网的问题，于是小编就整理了2个相关介绍动物疫苗批号查询网的解答，让我们一起看看吧。接种证没有编号可以去哪里查询？</p>
             </div>
         </div>
     </div>
@@ -304,8 +304,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-8-free-node-subscribe.htm">11月8日更新21.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、加拿大、韩国、香港、美国、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-27-clash-windows.htm">12月27日更新19M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、韩国、日本、加拿大、美国、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -314,8 +314,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-10-clash-node.htm">12月10日更新19.8M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、欧洲、加拿大、新加坡、韩国、美国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-28-free-node-subscribe-links.htm">12月28日更新22.7M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、香港、韩国、美国、新加坡、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -324,8 +324,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-28263.htm">重庆宠物领养吧狗（重庆宠物狗领养中心）</a></h4>
-                <p>摘要：       今天给各位分享重庆宠物领养吧狗的知识，其中也会对重庆宠物狗领养中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、哪里可以领养狗狗?... </p>
+                <h4><a href="/news/article-30071.htm">小动物疫苗注射证明去哪里开具（动物疫苗证明怎么开）</a></h4>
+                <p>摘要：       今天给各位分享小动物疫苗注射证明去哪里开具的知识，其中也会对动物疫苗证明怎么开进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、请问,我家狗.</p>
             </div>
         </div>
     </div>
@@ -334,8 +334,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-18-node-share-links.htm">10月18日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、韩国、欧洲、美国、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-1-5-clash-windows.htm">1月5日更新20.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、欧洲、新加坡、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -344,8 +344,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-22-clash-node-daily-updates.htm">11月22日更新22.1M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、日本、美国、欧洲、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-31-free-shadowrocket-node.htm">10月31日更新21.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、韩国、美国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -354,8 +354,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-30070.htm">宠物疫苗可以带上火车吗（宠物用疫苗可以带上高铁吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物疫苗可以带上火车吗，以及宠物用疫苗可以带上高铁吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物可以上火车吗2、...      </p>
+                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -364,8 +364,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-27336.htm">ruby 版本管理RVM （ruby version manager）</a></h4>
-                <p>macOS. 自带的ruby 版本目录权限比较高， 经常有很多 操作需要权限而不能执行   虽然 macOS 自带了一个 ruby 环境，但是是系统自己使用的，所以权限很小，只有 system。   </p>
+                <h4><a href="/free-nodes/2024-10-23-free-ssr-node.htm">10月23日更新21.8M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、香港、加拿大、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
