--- a/date/2024-11/page-3.htm
+++ b/date/2024-11/page-3.htm
@@ -274,8 +274,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-18-node-share.htm">11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、美国、日本、欧洲、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-29-free-ssr-node.htm">11月29日更新20.2M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、新加坡、日本、欧洲、韩国、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -284,8 +284,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-37798.htm">同城免费领养宠物怎么领取 同城免费领养宠物怎么领取的</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于同城免费领养宠物怎么领取的问题，于是小编就整理了4个相关介绍同城免费领养宠物怎么领取的解答，让我们一起看看吧。58上怎么发布免费</p>
+                <h4><a href="/free-nodes/2025-1-12-node-share.htm">1月12日更新20.6M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、新加坡、美国、欧洲、香港、日本、加拿大等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -294,8 +294,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34903.htm">包含福州免费领养宠物的平台有哪些的词条</a></h4>
-                <p>摘要：       今天给各位分享福州免费领养宠物的平台有哪些的知识，其中也会对进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、谁能推荐几个大型一点的宠物网站.</p>
+                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -304,8 +304,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-39275.htm">开宠物食品店赚钱吗 开宠物食品店赚钱吗现在</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于开宠物食品店赚钱吗的问题，于是小编就整理了3个相关介绍开宠物食品店赚钱吗的解答，让我们一起看看吧。宠物用品超市利润怎么样？宠物用</p>
+                <h4><a href="/news/article-40264.htm">猫咪多久打一次驱虫（猫咪多久打一次驱虫比较好）</a></h4>
+                <p>摘要：       今天给各位分享猫咪多久打一次驱虫的知识，其中也会对猫咪多久打一次驱虫比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、小猫驱虫多久一次.</p>
             </div>
         </div>
     </div>
@@ -314,8 +314,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-26871.htm">哈医大王海洋个人资料（王海云哈尔滨医生）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈哈医大王海洋个人资料，以及王海云哈尔滨医生对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、...最后录像曝光惹心酸,王海洋到底经历了什..</p>
+                <h4><a href="/free-nodes/2025-1-1-free-node-subscribe.htm">1月1日更新21.6M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、韩国、香港、新加坡、日本、欧洲等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -324,8 +324,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-21785.htm">宠物领养协议具有法律效应吗为什么还要签字（宠物领养协议需要身份证复印件吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物领养协议具有法律效应吗为什么还要签字，以及宠物领养协议需要身份证复印件吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗给其他人..</p>
+                <h4><a href="/news/article-34904.htm">青浦二中高考成绩排名（青浦二中2020本科录取率）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈青浦二中高考成绩排名，以及青浦二中2020本科录取率对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、青浦二中历年分数线2、...     </p>
             </div>
         </div>
     </div>
@@ -334,8 +334,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-26408.htm">狗狗疫苗自己打可以办狗证吗（狗狗疫苗自己打可以办狗证吗多少钱）</a></h4>
-                <p>摘要：       今天给各位分享狗狗疫苗自己打可以办狗证吗的知识，其中也会对狗狗疫苗自己打可以办狗证吗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/news/article-38288.htm">人和宠物打的狂犬疫苗一样吗 人和宠物打的狂犬疫苗一样吗多少钱</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于人和宠物打的狂犬疫苗一样吗的问题，于是小编就整理了4个相关介绍人和宠物打的狂犬疫苗一样吗的解答，让我们一起看看吧。狗打了狂犬疫苗</p>
             </div>
         </div>
     </div>
@@ -344,8 +344,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34429.htm">宠物领养合同有法律效应吗 宠物领养合同有法律效应吗知乎</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养合同有法律效应吗的问题，于是小编就整理了5个相关介绍宠物领养合同有法律效应吗的解答，让我们一起看看吧。签订领养宠物协议靠</p>
+                <h4><a href="/free-nodes/2024-11-8-free-node-subscribe.htm">11月8日更新21.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、欧洲、加拿大、韩国、香港、美国、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -354,8 +354,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-4-free-clash-subscribe.htm">12月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、香港、美国、新加坡、韩国、欧洲等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-24-free-v2ray.htm">10月24日更新19.8M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、美国、韩国、香港、日本、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -364,8 +364,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-16-node-share.htm">10月16日更新21M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、欧洲、新加坡、加拿大、美国、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-24-free-high-speed-nodes.htm">12月24日更新21.3M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、欧洲、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
