--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -93,6 +93,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-11-05">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-11-5-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="11月5日更新20.6M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-11-5-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">11月5日更新20.6M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了加拿大、韩国、日本、香港、新加坡、欧洲、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                11月5日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-11-04">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -246,23 +263,6 @@
                                 10月27日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-10-26">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、新加坡、香港、加拿大、美国、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                10月26日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            </div>
@@ -272,8 +272,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-8-clash-v2ray-ss-ssr.htm">12月8日更新22.7M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、韩国、加拿大、香港、新加坡、美国、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-10-clash-node.htm">12月10日更新19.8M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、欧洲、加拿大、新加坡、韩国、美国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -282,8 +282,68 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-21785.htm">宠物领养协议具有法律效应吗为什么还要签字（宠物领养协议需要身份证复印件吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物领养协议具有法律效应吗为什么还要签字，以及宠物领养协议需要身份证复印件吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗给其他人..</p>
+                <h4><a href="/free-nodes/2024-10-30-free-subscribe-node.htm">10月30日更新20.5M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-30615.htm">动物疫苗生产许可（动物疫苗生产许可管理办法）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗生产许可，以及动物疫苗生产许可管理办法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、给羊打疫苗的公司的行政许可手续...    </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-20-shadowrocket-node.htm">10月20日更新23M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、新加坡、香港、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-34904.htm">青浦二中高考成绩排名（青浦二中2020本科录取率）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈青浦二中高考成绩排名，以及青浦二中2020本科录取率对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、青浦二中历年分数线2、...     </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-12-3-free-v2ray.htm">12月3日更新20.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、新加坡、美国、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-20412.htm">动物疫苗厂家排名（动物疫苗企业名单）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗厂家排名的知识，其中也会对动物疫苗企业名单进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猪用高品质疫苗那个公司最好.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-11-14-clash-v2ray-ss-ssr.htm">11月14日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、日本、美国、香港、新加坡、欧洲等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -302,68 +362,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-3-free-clash-subscribe.htm">1月3日更新22.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、新加坡、香港、欧洲、加拿大、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-33473.htm">Python 路径处理(os.path模块)</a></h4>
-                <p>dest_file = r'D:\PythonProject\TestPython\test.py' # 实际存在 dest_fake_file = r'X:\PythonProject\TestPy</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-30071.htm">小动物疫苗注射证明去哪里开具（动物疫苗证明怎么开）</a></h4>
-                <p>摘要：       今天给各位分享小动物疫苗注射证明去哪里开具的知识，其中也会对动物疫苗证明怎么开进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、请问,我家狗.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-28728.htm">国内十大宠物粮食品牌有哪些呢（国内十大宠物粮食品牌有哪些呢图片）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈国内十大宠物粮食品牌有哪些呢，以及国内十大宠物粮食品牌有哪些呢图片对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫粮品牌十大排行榜是..</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-13-clash-node-daily-updates.htm">12月13日更新22M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、加拿大、日本、新加坡、美国、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-24-free-v2ray.htm">10月24日更新19.8M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、美国、韩国、香港、日本、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-3-free-v2ray.htm">12月3日更新20.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、新加坡、美国、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-30-free-high-speed-nodes.htm">12月30日更新21.1M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、韩国、日本、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -374,7 +374,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
